Home form has specifics to be turned true in order to be sent: must have name, message and if there is an email it must include @ and .com

--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -377,7 +377,7 @@ body {
 
   .icons-cont::before {
     background: transparent;
-    border-left: solid 2.75px black;
+    /* border-left: solid 2.75px black; */
   }
 
   .icons-cont {
