minor Home.css changes and removed console.log in  ContactForm. ready to add email sending caps to server.js

--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -386,9 +386,11 @@ body {
     overflow-y: auto;
     padding: 0;
     margin: 0;
-    border-bottom: solid black 2px;
-    border-top: solid black 2px;
+    /* border-bottom: solid black 2px;
+    border-top: solid black 2px; */
+    border: none;
     position: relative;
+    background-color: transparent;
     overflow: visible;
   }
 
