--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -1,13 +1,17 @@
+/* Root Variables */
 :root {
   --primary: #000000;
   --secondary: #aba1a2;
   --text-glow: #e8e5e6a3;
+  --icon-hover-scale: 1.1; /* Control hover scale for all icons */
+
   /* CRT effect variables */
   --color-crt-effect1: rgba(44, 44, 44, 0);
   --color-crt-effect2: rgba(0, 0, 0, 0.15);
   --color-crt-effect-r: rgba(128, 128, 128, 0.03);
   --color-crt-effect-g: rgba(128, 128, 128, 0.02);
   --color-crt-effect-b: rgba(128, 128, 128, 0.03);
+
   /* Color shift variables */
   --color-shift-1: rgba(222, 255, 252, 0.45); /* Grey Teal */
   --color-shift-2: rgba(100, 148, 237, 0.45); /* Cornflower Blue */
@@ -17,6 +21,7 @@
   --color-shift-6: rgba(214, 205, 135, 0.45); /* Gold */
 }
 
+/* Base Styling */
 html,
 body {
   height: 100%;
@@ -81,7 +86,7 @@ body {
   position: relative;
 }
 
-/* ICON STYLING */
+/* Icon Styling */
 .Icon {
   display: flex;
   justify-content: left;
@@ -94,16 +99,7 @@ body {
   text-decoration: none;
   color: transparent;
   font-size: 0%;
-}
-
-.Icon:hover {
-  color: black;
-  filter: sepia(5%) saturate(500%) hue-rotate(350deg);
-  mix-blend-mode: normal;
-  font-size: 1.5rem;
-  font-weight: 700;
-  text-shadow: 0 0 5px var(--text-glow), 0 0 10px, 0 0 15px var(--text-glow),
-    0 0 20px var(--text-glow);
+  box-sizing: border-box;
 }
 
 .icon-img {
@@ -114,8 +110,44 @@ body {
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
+  transition: transform 0.3s; /* Smooth scaling transition */
 }
 
+.icon-name {
+  display: block;
+  font-size: 1.5rem;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 100%;
+}
+
+.Icon:hover {
+  color: black;
+  filter: sepia(5%) saturate(500%) hue-rotate(350deg);
+  mix-blend-mode: normal;
+  font-size: 1rem;
+  font-weight: 700;
+  text-shadow: 0 0 5px var(--text-glow), 0 0 10px, 0 0 15px var(--text-glow),
+    0 0 20px var(--text-glow);
+}
+
+.icon-img:hover {
+  transform: scale(var(--icon-hover-scale));
+}
+
+/* Specific Fix for Email Icon */
+/* .Icon[href^="mailto"] {
+  min-width: 17vw;
+  justify-content: center;
+}
+
+.Icon[href^="mailto"] .icon-img {
+  width: 3.5vw;
+  height: 3.5vw;
+} */
+
+/* Color Shift Animation */
 @keyframes colorShift {
   0%,
   100% {
@@ -141,7 +173,7 @@ body {
   }
 }
 
-/* Tablet Styles */
+/* Responsive Styling */
 @media screen and (max-width: 1024px) {
   .home-content {
     background-size: 350%;
@@ -182,30 +214,6 @@ body {
     min-height: fit-content;
   }
 
-  /* Improved CRT effect for icons-cont */
-  .icons-cont::before {
-    content: "";
-    display: block;
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background: linear-gradient(
-        var(--color-crt-effect1) 50%,
-        var(--color-crt-effect2) 50%
-      ),
-      linear-gradient(
-        90deg,
-        var(--color-crt-effect-r),
-        var(--color-crt-effect-g),
-        var(--color-crt-effect-b)
-      );
-    background-size: 100% 2px, 3px 100%;
-    opacity: 0.7;
-    z-index: 0;
-  }
-
   .Icon {
     width: 90%;
     max-width: 400px;
@@ -224,6 +232,10 @@ body {
   .icon-img {
     width: 30px;
     height: 30px;
+  }
+
+  .icon-img:hover {
+    transform: scale(var(--icon-hover-scale));
   }
 }
 
@@ -253,6 +265,15 @@ body {
   .icon-name {
     word-break: break-word;
     max-width: 200px;
+  }
+
+  .icon-img {
+    width: 25px;
+    height: 25px;
+  }
+
+  .icon-img:hover {
+    transform: scale(var(--icon-hover-scale));
   }
 }
 
@@ -287,8 +308,12 @@ body {
   }
 
   .icon-img {
-    width: 25px;
-    height: 25px;
+    width: 20px;
+    height: 20px;
+  }
+
+  .icon-img:hover {
+    transform: scale(var(--icon-hover-scale));
   }
 }
 
@@ -325,6 +350,10 @@ body {
     width: 20px;
     height: 20px;
   }
+
+  .icon-img:hover {
+    transform: scale(var(--icon-hover-scale));
+  }
 }
 
 /* iPad Mini and Similar Devices */
@@ -352,6 +381,15 @@ body {
     width: 80%;
     padding: 2%;
   }
+
+  .icon-img {
+    width: 30px;
+    height: 30px;
+  }
+
+  .icon-img:hover {
+    transform: scale(var(--icon-hover-scale));
+  }
 }
 
 /* Landscape Orientation Adjustments */
@@ -377,7 +415,6 @@ body {
 
   .icons-cont::before {
     background: transparent;
-    /* border-left: solid 2.75px black; */
   }
 
   .icons-cont {
@@ -386,8 +423,6 @@ body {
     overflow-y: auto;
     padding: 0;
     margin: 0;
-    /* border-bottom: solid black 2px;
-    border-top: solid black 2px; */
     border: none;
     position: relative;
     background-color: transparent;
@@ -396,6 +431,15 @@ body {
 
   .Icon {
     padding: 3% 5%;
+  }
+
+  .icon-img {
+    width: 30px;
+    height: 30px;
+  }
+
+  .icon-img:hover {
+    transform: scale(var(--icon-hover-scale));
   }
 }
 
@@ -425,5 +469,14 @@ body {
   .Icon {
     width: 80%;
     padding: 2%;
+  }
+
+  .icon-img {
+    width: 30px;
+    height: 30px;
+  }
+
+  .icon-img:hover {
+    transform: scale(var(--icon-hover-scale));
   }
 }
